# ember-rs

./: Cargo.toml  README.md
.github/workflows/: cargo.yml
ember-core/: Cargo.toml
ember-core/src/: lib.rs
ember-infer-core/: Cargo.toml
ember-infer-core/src/: lib.rs
ember-infer-macros/: Cargo.toml
ember-infer-macros/src/: lib.rs
ember-infer-ref/: Cargo.toml
ember-infer-ref/src/: lib.rs
ember-infer-ref/tests/: integration.rs
ember-macros/: Cargo.toml
ember-macros/flatbuffers/: tflite_generated.rs
ember-macros/src/: lib.rs
ember-ref/: Cargo.toml
ember-ref/src/: lib.rs
ember-ref/tests/: integration.rs
ember-rs-macros/: Cargo.toml
scripts/: check_person_detect.py  generate_person_detect_fixture.py
