[package]
name = "ember-infer-macros"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["vintcessun"]
description = "Procedural macro for ember-rs: parses TFLite flatbuffer at compile time and generates backend-dispatched inference code"
repository = "https://github.com/vintcessun/ember-rs"
readme = "../README.md"
categories = ["embedded", "no-std", "science"]
keywords = ["tinyml", "embedded", "inference", "tflite", "no-std"]
include = [
    "/src/**",
    "flatbuffers/**",
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
flatbuffers = "23.1"
structmeta = "0.3"
